feat: create index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Previsão do Tempo</title>
+    <meta name="Author" content="Ingrid Lemos Caetano Silva">
+    <meta name="Description" content="Projeto desenvolvido no processo de aprendizado sobre o consumo de API.">
+    <meta name="Keywords" content="HTML, CSS, JavaScript, API, FullStack">
+    <title>ClimaAgora</title>
     <link rel="icon" type="image/svg" href="./src/assets/images/weather.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
-
-<!-- https://www.youtube.com/watch?v=t_GdX1iLYQE -->
 
 <body>
     <div id="container">
