--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
             </button>
         </form>
 
-        <div id="weather">
+        <div id="weather" class="show">
             <h1 id="title">Rolante, BR</h1>
 
             <div id="infos">
 
                 <div id="temp">
-                    <img id="temp_img" src="./src/assets/images/cloudy-cloud.svg" alt="" width="80px" height="60px">
-                </div>
-
+                    <img id="temp_img" src="./src/assets/images/weather.svg" alt="" width="80px" height="60px">        
                 <div>
                     <p id="temp_value">
                         32 <sup>C°</sup>
@@ -44,12 +42,12 @@
                         Ensolarado
                     </p>
                 </div>
+            </div>
 
                 <div id="other_infos">
 
                     <div class="info">
                         <i id="temp_max_icon" class="fa-solid fa-temperature-high"></i>
-
                         <div>
                             <h2>Temp. max</h2>
                             <p id="temp_max">
@@ -60,7 +58,6 @@
 
                     <div class="info">
                         <i id="temp_min_icon" class="fa-solid fa-temperature-high"></i>
-
                         <div>
                             <h2>Temp. min</h2>
                             <p id="temp_mib">
@@ -71,7 +68,6 @@
 
                     <div class="info">
                         <i id="humidity_icon" class="fa-solid fa-droplet"></i>
-
                         <div>
                             <h2>Humidade</h2>
                             <p id="humidity">
@@ -82,7 +78,6 @@
 
                     <div class="info">
                         <i id="wind_icon" class="fa-solid fa-wind"></i>
-
                         <div>
                             <h2>Vento</h2>
                             <p id="wind">
@@ -94,9 +89,10 @@
             </div>
         </div>
 
-        <div id="alert">
-
-        </div>
+        <div id="alert"></div>
     </div>
+
+    <script src="./src/js/script.js"></script>
+    
 </body>
 </html>
