feat: create script.js

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
             </button>
         </form>
 
-        <div id="weather" class="show">
-            <h1 id="title">Rolante, BR</h1>
+        <div id="weather">
+            <h1 id="title">São Paulo, BR</h1>
 
             <div id="infos">
 
                 <div id="temp">
-                    <img id="temp_img" src="./src/assets/images/weather.svg" alt="" width="80px" height="60px">        
+                    <img id="temp_img" src="http://openweathermap.org/img/wn/04d@2x.png" alt="">        
                 <div>
                     <p id="temp_value">
-                        32 <sup>C°</sup>
+                        32 
                     </p>
                     <p id="temp_description">
                         Ensolarado
                     </p>
                 </div>
-            </div>
+                </div>
 
                 <div id="other_infos">
-
+                    
                     <div class="info">
                         <i id="temp_max_icon" class="fa-solid fa-temperature-high"></i>
                         <div>
@@ -60,7 +60,7 @@
                         <i id="temp_min_icon" class="fa-solid fa-temperature-high"></i>
                         <div>
                             <h2>Temp. min</h2>
-                            <p id="temp_mib">
+                            <p id="temp_min">
                                 12 <sup>C°</sup>
                             </p>
                         </div>
@@ -93,6 +93,7 @@
     </div>
 
     <script src="./src/js/script.js"></script>
-    
+
 </body>
 </html>
+
