--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 type="search" 
                 name="city_name" 
                 id="city_name"
-                placeholder="Buscar cidade">
+                placeholder="Buscar cidade"
+                autocomplete="off">
 
             <button type="submit">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -93,6 +94,7 @@
     </div>
 
     <script src="./src/js/script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkHZdBn1RBNuDwK7YPK05c8jSZOKLbxAQ&libraries=places&callback=initAutocomplete" async defer></script>
 
 </body>
 </html>
