--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     </div>
 
     <script src="./src/js/script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkHZdBn1RBNuDwK7YPK05c8jSZOKLbxAQ&libraries=places&callback=initAutocomplete" async defer></script>
+    
+    <script src="https://maps.googleapis.com/maps/api/js?key={YOU_KEY_API}&libraries=places&callback=initAutocomplete" async defer></script> <!-- inserir ApiKey -->
 
 </body>
 </html>
